<resources>
    <string name="app_name">RBS System</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Fake-Name</string>
    <string name="Fake_email">Fake-Email@gmail.com</string>
    <string name="Fake_id">Fake-12345</string>
    <string name="Fake_phone_no">09123456788</string>
    <string name="Fake_item_id">fake-78906</string>
    <string name="Fake_currency">$</string>
    <string name="Fake_rupees">105</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="Open" />
    <string name="Close" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="na">NA</string>
    <string name="date">Date</string>
    <string name="save_btn_string">Save</string>
    <string name="select_date_btn_string">Select date</string>
    <string name="yes_string">Yes</string>
    <string name="cancel_string">Cancel</string>
    <string name="alert_string">Alert!</string>
    <string name="alert_msg_string">Are you sure you want to exit?</string>
    <string name="select_customer">Select Customer</string>
    <string name="search_here">Search here...</string>
    <string name="select_item">Select Item</string>
    <string name="products">Products</string>
    <string name="offers">Offers</string>
    <string name="back_button">back_button</string>
    <string name="fake_customer_name">fake_customer_Name</string>
    <string name="fake_item_name">Fake_Item_Name</string>
    <string name="serial_no">Serial No:</string>
    <string name="item_price">Item Price:</string>
    <string name="last_active">Last Active:</string>
    <string name="phno">Phno:</string>
    <string name="id">ID:</string>
    <string name="email">Email:</string>
    <string name="select_category">Select Category</string>
    <string name="lorem_ipsum">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="fake_city">Peshawar city</string>
    <string name="shop_name">HP Store</string>
    <string name="Status">Status</string>
    <string name="shopkeeper_name">Shopkeeper Name</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No</string>
    <string name="Email">Email</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string-array name="list">
        <item>Please select item condition</item>
        <item>A+</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>


</resources>
