<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/screen_header_rectangle">

        <TextView
            style="@style/TextViews_Bold_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Change Passcode"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/add_user_data_fields_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="User Name" />


        <TextView
            android:id="@+id/username_textview"
            style="@style/TextViews_Bold_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/fake_customer_name"
            android:textColor="@color/gradientDarkBlue" />


        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Phone Number" />

        <TextView
            android:id="@+id/phone_number_textview"
            style="@style/TextViews_Bold_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Fake_phone_no"
            android:textColor="@color/gradientDarkBlue" />

        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Email" />

        <TextView
            android:id="@+id/email_textview"
            style="@style/TextViews_Bold_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Fake_email"
            android:textColor="@color/gradientDarkBlue" />

        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Old Passcode" />

        <EditText
            android:id="@+id/random_passcode_editText"
            style="@style/EditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="********"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/change_passcode_submit_btn"
                style="@style/green_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/save_btn_string" />

            <TextView
                android:id="@+id/change_passcode_cancel_btn"
                style="@style/gray_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/cancel_string" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>