<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/screen_header_rectangle">

        <TextView
            style="@style/TextViews_Bold_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Add Accessory"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/midLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Accessory Name" />

        <EditText
            android:id="@+id/alertAccessoryName_editText"
            style="@style/EditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter accessory name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Quantity" />

        <EditText
            android:id="@+id/alertAccessoryQuantity_editText"
            style="@style/EditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter quantity"
            android:inputType="number" />

        <TextView
            style="@style/TextViews_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Unit Price" />

        <EditText
            android:id="@+id/alertAccessoryUnitPrice_editText"
            style="@style/EditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter unit price"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total Price" />

            <TextView
                android:id="@+id/alertAccessoryTotalPrice_currency_textView"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/Fake_currency"
                android:textColor="@color/textBlue" />

            <TextView
                android:id="@+id/alertAccessoryTotalPrice_textView"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:gravity="right"
                android:text="@string/na"
                android:textColor="@color/textBlue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alertAddAccessoryEnter_textview"
                style="@style/green_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/save_btn_string" />


            <TextView
                android:id="@+id/alertAddAccessoryCancel_textview"
                style="@style/gray_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/cancel_string" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>