<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VendorShopkeepersShopReceipts">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/screen_header_rectangle">

        <TextView
            style="@style/TextViews_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back_btn"
            android:text="Shopkeeper Details"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back_arrow" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Shop Details" />

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Name"/>

            <TextView
                android:id="@+id/shop_name_textView"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/gradientDarkBlue"
                android:text="@string/shop_name" />

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone" />

            <TextView
                android:id="@+id/shop_phno_textView"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/gradientDarkBlue"
                android:layout_marginBottom="10dp"
                android:text="@string/Fake_phone_no" />

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"/>

            <TextView
                android:id="@+id/shop_email_textView"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/gradientDarkBlue"
                android:text="@string/Fake_email" />

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"/>

            <TextView
                android:id="@+id/shop_address_textView"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/gradientDarkBlue"
                android:layout_marginBottom="10dp"
                android:text="@string/fake_city" />

            <TextView
                android:id="@+id/invoices"
                style="@style/TextViews_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Invoices" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orders_list_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>