<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rbs_vendor_order_receipt">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/screen_header_rectangle">

        <TextView
            style="@style/TextViews_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back_btn"
            android:text="Invoice Details"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back_arrow" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    style="@style/TextViews_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Invoice Number" />

                <TextView
                    android:id="@+id/invoiceNo_TextView"
                    style="@style/TextViews_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="NA"
                    android:textColor="@color/gradientDarkBlue" />

            </LinearLayout>

            <TextView
                android:id="@+id/vendor_name_textView"
                style="@style/TextViews_Alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/shop_name"
                android:textColor="@color/textBlue" />

            <TextView
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Phone"
                android:textColor="@color/gradientDarkBlue" />

            <TextView
                android:id="@+id/vendor_phno_textView"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Fake_phone_no" />

            <TextView
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Email"
                android:textColor="@color/gradientDarkBlue" />

            <TextView
                android:id="@+id/vendor_email_textView"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Fake_email" />

            <TextView
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Address"
                android:textColor="@color/gradientDarkBlue" />

            <TextView
                android:id="@+id/vendor_address_textView"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/fake_city" />

            <TextView
                android:id="@+id/text"
                style="@style/TextViews_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@color/gradientDarkBlue" />

            <LinearLayout
                android:id="@+id/date_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/date_textView"
                    style="@style/TextViews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.9"
                    android:text="-- -- --" />

            </LinearLayout>


            <TextView
                android:id="@+id/invoices"
                style="@style/TextViews_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="Invoice" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_invoice_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


            <LinearLayout
                android:id="@+id/balance_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextViews_Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Total : "
                            android:textColor="@color/textBlue" />

                        <TextView
                            android:id="@+id/balance_currency_textView"
                            style="@style/TextViews_Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Fake_currency"
                            android:textColor="@color/textBlue" />

                        <TextView
                            android:id="@+id/totalBalance_textView"
                            style="@style/TextViews_Alert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="0.00"
                            android:textColor="@color/textBlue" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/confirm_order_btn"
                style="@style/blue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="Confirm Order" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>